# Skypro_homework

./: .env.example  .flake8  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
htmlcov/: index.html
src/: decorators.py  external_api.py  file_logger.py  generators.py  masks.py  processing.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
tests/logs/: mylog.txt
